Implementacion de registro rapido de los animales al sistema
