# apps/api/docs/openapi.yaml
@@ -39,6 +39,12 @@ paths:
       responses:
         "201":
           description: Created
+  /animals/quick:
+    post:
+      summary: Quick register animals
+      responses:
+        "201":
+          description: Created
   /animals/{id}:
     get:
       summary: Get animal
